tests/baselines/reference/duplicateLocalVariable4.errors.txt
tests/cases/compiler/duplicateLocalVariable4.ts(6,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' has type 'typeof E' at tests/cases/compiler/duplicateLocalVariable4.ts 4:4, but here has type 'E'.


==== tests/cases/compiler/duplicateLocalVariable4.ts (1 errors) ====
    enum E{
    a
    }
     
    var x = E;
    var x = E.a;
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' has type 'typeof E' at tests/cases/compiler/duplicateLocalVariable4.ts 4:4, but here has type 'E'.